# hack_egg

./: Cargo.toml  README.md  TODO.md
asset/example_payload/: tweet.json  tweets.json  user.json  users.json
src/: interface.rs  lib.rs
src/interface/: params.rs  responce.rs  response.rs
