[package]
name = "hack_egg"
version = "0.1.0"
authors = ["Loptall <yutapypy0930@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
twitter-text = "0.2"
url = "2.2"
reqwest = "0.11"
geojson = "0.22"
