[package]
name = "hack_egg"
version = "0.1.0"
authors = ["Loptall <yutapypy0930@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
geojson = "0.22"
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
serde_qs = "0.8"
